콤마하나수정함

--- a/portal/html/USR-1220-F-DASH.html
+++ b/portal/html/USR-1220-F-DASH.html
@@ -344,11 +344,11 @@
                                             <strong>출자펀드</strong>
                                         </li>
                                         <li class="swiper-slide">
-                                            <span>26조 650억원</span>
+                                            <span>63개</span>
                                             <strong>투자기업수</strong>
                                         </li>
                                         <li class="swiper-slide">
-                                            <span>1.3배</span>
+                                            <span>3,628,961</span>
                                             <strong>투자금액</strong>
                                         </li>
                                         <li class="swiper-slide">
