--- a/portal/html/USR-1220-F-DASH.html
+++ b/portal/html/USR-1220-F-DASH.html
@@ -356,7 +356,7 @@
                                             <strong>자조합 청산 수익률</strong>
                                         </li>
                                         <li class="swiper-slide">
-                                            <span>8조 2,152223억원</span>
+                                            <span>8조 223억원</span>
                                             <strong>유니콘기업 배출수</strong>
                                         </li>
                                         <li class="swiper-slide">
@@ -364,8 +364,8 @@
                                             <strong>창업기업투자후7년 생존율</strong>
                                         </li>
                                         <li class="swiper-slide">
-                                            <span>26조 222650억원</span>
-                                            <strong>코스닥 상장기업 중 모태자펀드 투자기업</strong>
+                                            <span>26조 22억원</span>
+                                            <strong>코스닥 상장기업 중<br/>모태자펀드 투자기업</strong>
                                         </li>
                                     </ul>
                                 </div>
