구인구직 form 수정

--- a/portal/html/USR-1241-F-FORM.html
+++ b/portal/html/USR-1241-F-FORM.html
@@ -354,6 +354,10 @@
                                                 <input type="radio" id="radio_04" name="rdo_group_01">
                                                 <label for="radio_04">기관/협회</label>
                                             </span>
+                                            <span>
+                                                <input type="radio" id="radio_05" name="rdo_group_01">
+                                                <label for="radio_05">예비창업자</label>
+                                            </span>
                                         </div>
                                     </div>
                                 </td>
