투자검색 폰트 줄임

--- a/portal/html/USR-1020-F-LIST.html
+++ b/portal/html/USR-1020-F-LIST.html
@@ -356,7 +356,7 @@
                             <div class="chk_box">
                                 <span>
                                     <input type="checkbox" id="chk_03">
-                                    <label for="chk_03">전기/기계/장비</label>
+                                    <label for="chk_03" class="fontsize_s">전기/기계/장비</label>
                                 </span>
                             </div>
                         </li>
@@ -383,7 +383,7 @@
                             <div class="chk_box">
                                 <span>
                                     <input type="checkbox" id="chk_06">
-                                    <label for="chk_06">영상/공연/음반</label>
+                                    <label for="chk_06" class="fontsize_s">영상/공연/음반</label>
                                 </span>
                             </div>
                         </li>
