벤처투자매칭 링크연결

--- a/portal/html/USR-1063-H-CONTN.html
+++ b/portal/html/USR-1063-H-CONTN.html
@@ -300,18 +300,17 @@
                     <li>
                         <a href="javascript:void(0);">주식유통정보</a>
                         <ul>
-                            <li><a href="">투자자 검색</a></li>
-                            <li><a href="">투자유치 희망기업 검색</a></li>
-                            <li><a href="">통합공시</a></li>
-                            <li><a href="">기업홍보</a></li>
-                            <li><a href="">벤처투자마트</a></li>
+                            <li><a href="./USR-1020-F-LIST.html">투자자 검색</a></li>
+                            <li><a href="./USR-1010-F-LIST.html">투자유치 희망기업 검색</a></li>
+                            <li><a href="./USR-1040-F-DASH.html">통합공시</a></li>
+                            <li><a href="./USR-1030-B-LIST.html">기업홍보</a></li>
+                            <li><a href="./USR-1051-H-CONTN.html">벤처투자마트</a></li>
                         </ul>
                     </li>
                     <li class="selected">
                         <a href="javascript:void(0);">M&A 거래정보망</a>
                         <ul>
-                            <li><a href="">VC구주유통망</a></li>
-                            <li><a href="">ㅍ</a></li>
+                            <li><a href="./USR-1061-H-CONTN.html">VC구주유통망</a></li>
                         </ul>
                     </li>
                 </ul>
