--- a/portal/html/USR-2210-F-LIST.html
+++ b/portal/html/USR-2210-F-LIST.html
@@ -322,7 +322,7 @@
                                 <li>
                                     <a href="javascript:void(0);">벤처투자마트</a>
                                     <ul>
-                                        <li><a href="">벤처투자마트란?</a></li>
+                                        <li><a href="./USR-1051-H-CONTN.html">벤처투자마트란?</a></li>
                                         <li><a href="">상담회 공지</a></li>
                                         <li><a href="">FAQ</a></li>
                                         <li><a href="">신청</a></li>
