--- a/portal/html/USR-1040-F-DASH.html
+++ b/portal/html/USR-1040-F-DASH.html
@@ -300,11 +300,11 @@
                     <li class="selected">
                         <a href="javascript:void(0);">통합공시</a>
                         <ul>
-                            <li><a href="">투자자 검색</a></li>
-                            <li><a href="">투자유치 희망기업 검색</a></li>
-                            <li><a href="">기업홍보</a></li>
-                            <li><a href="">벤처투자마트</a></li>
-                            <li><a href="">주식유통정보</a></li>
+                            <li><a href="./USR-1020-F-LIST.html">투자자 검색</a></li>
+                            <li><a href="./USR-1010-F-LIST.html">투자유치 희망기업 검색</a></li>
+                            <li><a href="./USR-1030-B-LIST.html">기업홍보</a></li>
+                            <li><a href="./USR-1051-H-CONTN.html">벤처투자마트</a></li>
+                            <li><a href="./USR-1061-H-CONTN.html">주식유통정보</a></li>
                         </ul>
                     </li>
                 </ul>
