--- a/portal/html/USR-1051-H-CONTN.html
+++ b/portal/html/USR-1051-H-CONTN.html
@@ -300,20 +300,20 @@
                     <li>
                         <a href="javascript:void(0);">벤처투자마트</a>
                         <ul>
-                            <li><a href="">투자자 검색</a></li>
-                            <li><a href="">투자유치 희망기업 검색</a></li>
-                            <li><a href="">기업홍보</a></li>
-                            <li><a href="">통합공시</a></li>
-                            <li><a href="">주식유통정보</a></li>
+                            <li><a href="./USR-1020-F-LIST.html">투자자 검색</a></li>
+                            <li><a href="./USR-1010-F-LIST.html">투자유치 희망기업 검색</a></li>
+                            <li><a href="./USR-1030-B-LIST.html">기업홍보</a></li>
+                            <li><a href="./USR-1040-F-DASH.html">통합공시</a></li>
+                            <li><a href="./USR-1061-H-CONTN.html">주식유통정보</a></li>
                         </ul>
                     </li>
                     <li class="selected">
                         <a href="javascript:void(0);">벤처투자마트란?</a>
                         <ul>
-                            <li><a href="">벤처투자마트 신청</a></li>
-                            <li><a href="">신청 정보 확인</a></li>
-                            <li><a href="">벤처투자마트 공지</a></li>
-                            <li><a href="">FAQ</a></li>
+                            <li><a href="./USR-1054-F-FORM.html">벤처투자마트 신청</a></li>
+                            <li><a href="./USR-1056-F-LIST.html">신청 정보 확인</a></li>
+                            <li><a href="./USR-1052-B-LIST.html">벤처투자마트 공지</a></li>
+                            <li><a href="./USR-1053-B-LIST.html">FAQ</a></li>
                         </ul>
                     </li>
                 </ul>
