--- a/portal/html/USR-02-02-F-LIST.html
+++ b/portal/html/USR-02-02-F-LIST.html
@@ -300,11 +300,11 @@
                     <li class="selected">
                         <a href="javascript:void(0);">맞춤투자 가이드</a>
                         <ul>
-                            <li><a href="">가이드 A to Z</a></li>
-                            <li><a href="">FAQ</a></li>
-                            <li><a href="">용어사전</a></li>
-                            <li><a href="">교육</a></li>
-                            <li><a href="">벤처투자상담</a></li>
+                            <li><a href="./USR-1110-H-CONTN.html">가이드 A to Z</a></li>
+                            <li><a href="./USR-02-04-B-LIST.html">FAQ</a></li>
+                            <li><a href="./USR-1150-B-LIST.html">용어사전</a></li>
+                            <li><a href="./USR-1161-H-CONTN.html">교육</a></li>
+                            <li><a href="./USR-1162-B-LIST.html">벤처투자상담</a></li>
                         </ul>
                     </li>
                 </ul>
