투자검색 화살표 수정

--- a/portal/html/USR-1010-F-LIST.html
+++ b/portal/html/USR-1010-F-LIST.html
@@ -746,17 +746,17 @@
                         <ul>
                             <li>
                                 <div class="btn_box">
-                                    <button>최근 업데이트 순 ▼</button>
+                                    <button class="arrow">최근 업데이트 순</button>
                                 </div>
                             </li>
                             <li>
                                 <div class="btn_box">
-                                    <button>투자희망금액 순 ▼</button>
+                                    <button class="arrow">투자희망금액 순</button>
                                 </div>
                             </li>
                             <li>
                                 <div class="btn_box">
-                                    <button>업력 순 ▼</button>
+                                    <button class="arrow">업력 순</button>
                                 </div>
                             </li>
                         </ul>
