--- a/portal/html/USR-1020-F-LIST.html
+++ b/portal/html/USR-1020-F-LIST.html
@@ -897,17 +897,17 @@
                                     <ul>
                                         <li>
                                             <div class="btn_box">
-                                                <button>투자사명 순 ▼</button>
+                                                <button class="arrow">투자사명 순</button>
                                             </div>
                                         </li>
                                         <li>
                                             <div class="btn_box">
-                                                <button>업력 순 ▼</button>
+                                                <button class="arrow">업력 순</button>
                                             </div>
                                         </li>
                                         <li>
                                             <div class="btn_box">
-                                                <button>운용규모 순 ▼</button>
+                                                <button class="arrow">운용규모 순</button>
                                             </div>
                                         </li>
                                     </ul>
@@ -1135,12 +1135,12 @@
                                     <ul>
                                         <li>
                                             <div class="btn_box">
-                                                <button>투자기간 ▼</button>
+                                                <button class="arrow">투자기간</button>
                                             </div>
                                         </li>
                                         <li>
                                             <div class="btn_box">
-                                                <button>소진비율 ▼</button>
+                                                <button class="arrow">소진비율</button>
                                             </div>
                                         </li>
                                     </ul>
