--- a/portal/html/USR-1242-F-LIST.html
+++ b/portal/html/USR-1242-F-LIST.html
@@ -447,7 +447,7 @@
                         <ul>
                             <li>
                                 <div class="btn_box">
-                                    <button>경력 ▼</button>
+                                    <button class="arrow">경력</button>
                                 </div>
                             </li>
                             <li>
