--- a/portal/html/USR-1241-F-DTL.html
+++ b/portal/html/USR-1241-F-DTL.html
@@ -300,17 +300,17 @@
                     <li>
                         <a href="javascript:void(0);">구인구직</a>
                         <ul>
-                            <li><a href="">정책</a></li>
-                            <li><a href="">법령</a></li>
-                            <li><a href="">통계</a></li>
-                            <li><a href="">자료실</a></li>
-                            <li><a href="">업무처리지원</a></li>
+                            <li><a href="./USR-1211-H-CONTN.html">정책</a></li>
+                            <li><a href="./USR-1213-H-CONTN.html">법령</a></li>
+                            <li><a href="./USR-1220-F-DASH.html">통계</a></li>
+                            <li><a href="./USR-1231-B-LIST.html">정보광장</a></li>
+                            <li><a href="./USR-12511-H-CONTN.html">업무처리지원</a></li>
                         </ul>
                     </li>
                     <li class="selected">
                         <a href="javascript:void(0);">채용공고</a>
                         <ul>
-                            <li><a href="">인력Pool</a></li>
+                            <li><a href="./USR-1242-F-LIST.html">인력Pool</a></li>
                         </ul>
                     </li>
                 </ul>
