--- a/portal/html/USR-12511-H-CONTN.html
+++ b/portal/html/USR-12511-H-CONTN.html
@@ -300,19 +300,19 @@
                     <li>
                         <a href="javascript:void(0);">업무처리지원</a>
                         <ul>
-                            <li><a href="">정책</a></li>
-                            <li><a href="">법령</a></li>
-                            <li><a href="">통계</a></li>
-                            <li><a href="">자료실</a></li>
-                            <li><a href="">구인구직</a></li>
+                            <li><a href="./USR-1211-H-CONTN.html">정책</a></li>
+                            <li><a href="./USR-1213-H-CONTN.html">법령</a></li>
+                            <li><a href="./USR-1220-F-DASH.html">통계</a></li>
+                            <li><a href="./USR-1231-B-LIST.html">정보광장</a></li>
+                            <li><a href="./USR-1241-F-LIST.html">구인구직</a></li>
                         </ul>
                     </li>
                     <li class="selected">
-                        <a href="javascript:void(0);">VC 근무경력 확인</a>
+                        <a href="javascript:void(0);">VC 경력 확인</a>
                         <ul>
-                            <li><a href="">VC 경력 확인</a></li>
-                            <li><a href="">VC Track Record</a></li>
-                            <li><a href="">신청내역 확인</a></li>
+                            <li><a href="./USR-1251-F-DTL.html">VC 근무경력 확인</a></li>
+                            <li><a href="./USR-12512-F-DTL.html">VC Track Record</a></li>
+                            <li><a href="./USR-1252-F-LIST.html">신청내역 확인</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -321,7 +321,7 @@
             <div class="inner">
 
                 <div class="tit_box">
-                    <h3>VC 근무경력 확인</h3>
+                    <h3>VC 경력 확인</h3>
                     <span>메뉴에 대한 설명을 상세하게 작성합니다. 메뉴에 대한 설명을 상세하게 작성합니다.</span>
                 </div>
 
