--- a/portal/html/USR-2210-F-LIST.html
+++ b/portal/html/USR-2210-F-LIST.html
@@ -385,24 +385,24 @@
                                 <li>
                                     <a href="javascript:void(0);">정보광장</a>
                                     <ul>
-                                        <li><a href="">보고서</a></li>
-                                        <li><a href="">뉴스레터 웹진</a></li>
-                                        <li><a href="">발행물</a></li>
-                                        <li><a href="">자료실</a></li>
-                                        <li><a href="">프로그램</a></li>
+                                        <li><a href="./USR-1231-B-LIST.html">통계/연구 보고서</a></li>
+                                        <li><a href="./USR-1232-B-LIST.html">뉴스레터 웹진</a></li>
+                                        <li><a href="./USR-1234-B-LIST.html">발행물</a></li>
+                                        <li><a href="./USR-1231-B-LIST.html">정보광장</a></li>
+                                        <li><a href="./USR-1236-H-CONTN.html">프로그램</a></li>
                                     </ul>
                                 </li>
                                 <li>
                                     <a href="javascript:void(0);">구인구직</a>
                                     <ul>
-                                        <li><a href="">채용공고</a></li>
-                                        <li><a href="">인력Pool</a></li>
+                                        <li><a href="./USR-1241-F-LIST.html">채용공고</a></li>
+                                        <li><a href="./USR-1242-F-LIST.html">인력Pool</a></li>
                                     </ul>
                                 </li>
                                 <li>
                                     <a href="javascript:void(0);">업무처리지원</a>
                                     <ul>
-                                        <li><a href="">VC 경력 확인</a></li>
+                                        <li><a href="./USR-12511-H-CONTN.html">VC 경력 확인</a></li>
                                         <li><a href="">신청내역확인</a></li>
                                     </ul>
                                 </li>
