--- a/portal/html/USR-1220-F-DASH.html
+++ b/portal/html/USR-1220-F-DASH.html
@@ -298,14 +298,20 @@
                             <li><a href="">벤처투자포털</a></li>
                         </ul>
                     </li>
-                    <li class="selected">
+                    <li>
                         <a href="javascript:void(0);">통계</a>
                         <ul>
-                            <li><a href="">정책</a></li>
-                            <li><a href="">법령</a></li>
-                            <li><a href="">자료실</a></li>
-                            <li><a href="">구인구직</a></li>
-                            <li><a href="">업무처리지원</a></li>
+                            <li><a href="./USR-1211-H-CONTN.html">정책</a></li>
+                            <li><a href="./USR-1213-H-CONTN.html">법령</a></li>
+                            <li><a href="./USR-1231-B-LIST.html">정보광장</a></li>
+                            <li><a href="./USR-1241-F-LIST.html">구인구직</a></li>
+                            <li><a href="./USR-12511-H-CONTN.html">업무처리지원</a></li>
+                        </ul>
+                    </li>
+                    <li class="selected">
+                        <a href="javascript:void(0);">대시보드</a>
+                        <ul>
+                            <li><a href="./USR-1221-F-DASH.html">투자실적</a></li>
                         </ul>
                     </li>
                 </ul>
