--- a/portal/html/USR-1235-B-LIST.html
+++ b/portal/html/USR-1235-B-LIST.html
@@ -290,7 +290,7 @@
                         <a href="">home</a>
                     </li>
                     <li>
-                        <a href="">정보서비스</a>
+                        <a href="javascript:void(0);">정보서비스</a>
                         <ul>
                             <li><a href="">벤처투자매칭</a></li>
                             <li><a href="">투자가이드</a></li>
@@ -298,22 +298,22 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="">자료실</a>
+                        <a href="javascript:void(0);">정보광장</a>
                         <ul>
-                            <li><a href="">정책</a></li>
-                            <li><a href="">법령</a></li>
-                            <li><a href="">통계</a></li>
-                            <li><a href="">구인구직</a></li>
-                            <li><a href="">업무처리지원</a></li>
+                            <li><a href="./USR-1211-H-CONTN.html">정책</a></li>
+                            <li><a href="./USR-1213-H-CONTN.html">법령</a></li>
+                            <li><a href="./USR-1220-F-DASH.html">통계</a></li>
+                            <li><a href="./USR-1241-F-LIST.html">구인구직</a></li>
+                            <li><a href="./USR-12511-H-CONTN.html">업무처리지원</a></li>
                         </ul>
                     </li>
                     <li class="selected">
-                        <a href="">자료실</a>
+                        <a href="javascript:void(0);">자료실</a>
                         <ul>
-                            <li><a href="">보고서</a></li>
-                            <li><a href="">뉴스레터 웹진</a></li>
-                            <li><a href="">발행물</a></li>
-                            <li><a href="">프로그램</a></li>
+                            <li><a href="./USR-1231-B-LIST.html">통계/연구 보고서</a></li>
+                            <li><a href="./USR-1232-B-LIST.html">뉴스레터 웹진</a></li>
+                            <li><a href="./USR-1234-B-LIST.html">발행물</a></li>
+                            <li><a href="./USR-1236-H-CONTN.html">프로그램</a></li>
                         </ul>
                     </li>
                 </ul>
