--- a/portal/html/USR-2042-F-LIST.html
+++ b/portal/html/USR-2042-F-LIST.html
@@ -298,7 +298,7 @@
                     <li class="selected">
                         <a href="javascript:void(0);">즐겨찾기 관리</a>
                         <ul>
-                            <li><a href="">정책</a></li>
+                            <li><a href="./USR-1211-H-CONTN.html">정책</a></li>
                         </ul>
                     </li>
                 </ul>
