--- a/portal/html/USR-1320-B-DTL.html
+++ b/portal/html/USR-1320-B-DTL.html
@@ -287,10 +287,10 @@
             <div class="location">
                 <ul>
                     <li class="home">
-                        <a href="">home</a>
+                        <a href="./main.html">home</a>
                     </li>
                     <li>
-                        <a href="">벤처투자포털</a>
+                        <a href="javascript:void(0);">벤처투자포털</a>
                         <ul>
                             <li><a href="">벤처투자매칭</a></li>
                             <li><a href="">투자가이드</a></li>
@@ -298,13 +298,13 @@
                         </ul>
                     </li>
                     <li class="selected">
-                        <a href="">공지사항</a>
+                        <a href="javascript:void(0);">공지사항</a>
                         <ul>
-                            <li><a href="">포털소개</a></li>
-                            <li><a href="">커뮤니티</a></li>
-                            <li><a href="">벤처투자 TALK</a></li>
-                            <li><a href="">벤처투자 부당행위 신고센터</a></li>
-                            <li><a href="">유관기관 안내</a></li>
+                            <li><a href="./USR-1310-H-CONTN.html">포털소개</a></li>
+                            <li><a href="./USR-1320-B-LIST.html">커뮤니티</a></li>
+                            <li><a href="./USR-1341-F-LIST.html">벤처투자 TALK</a></li>
+                            <li><a href="./USR-1350-F-FORM.html">벤처투자 부당행위 신고센터</a></li>
+                            <li><a href="./USR-1361-H-CONTN.html">유관기관 안내</a></li>
                         </ul>
                     </li>
                 </ul>
