--- a/portal/html/USR-1361-H-CONTN.html
+++ b/portal/html/USR-1361-H-CONTN.html
@@ -287,7 +287,7 @@
             <div class="location">
                 <ul>
                     <li class="home">
-                        <a href="">home</a>
+                        <a href="./main.html">home</a>
                     </li>
                     <li>
                         <a href="javascript:void(0);">벤처투자포털</a>
@@ -301,10 +301,10 @@
                         <a href="javascript:void(0);">유관기관 안내</a>
                         <ul>
                             <li><a href="">공지사항</a></li>
-                            <li><a href="">포털소개</a></li>
-                            <li><a href="">커뮤니티</a></li>
-                            <li><a href="">벤처투자 TALK</a></li>
-                            <li><a href="">벤처투자 부당행위 신고센터</a></li>
+                            <li><a href="./USR-1310-H-CONTN.html">포털소개</a></li>
+                            <li><a href="./USR-1320-B-LIST.html">커뮤니티</a></li>
+                            <li><a href="./USR-1341-F-LIST.html">벤처투자 TALK</a></li>
+                            <li><a href="./USR-1350-F-FORM.html">벤처투자 부당행위 신고센터</a></li>
                         </ul>
                     </li>
                 </ul>
