--- a/portal/html/USR-2013-F-FORM.html
+++ b/portal/html/USR-2013-F-FORM.html
@@ -286,7 +286,7 @@
             <div class="location">
                 <ul>
                     <li class="home">
-                        <a href="">home</a>
+                        <a href="./main.html">home</a>
                     </li>
                     <li>
                         <a href="javascript:void(0);">로그인</a>
