--- a/portal/html/USR-2110-F-LIST.html
+++ b/portal/html/USR-2110-F-LIST.html
@@ -287,7 +287,7 @@
             <div class="location">
                 <ul>
                     <li class="home">
-                        <a href="">home</a>
+                        <a href="./main.html">home</a>
                     </li>
                     <li class="selected">
                         <a href="javascript:void(0);">통합검색</a>
