--- a/portal/html/USR-4010-H-CONTN.html
+++ b/portal/html/USR-4010-H-CONTN.html
@@ -287,7 +287,7 @@
             <div class="location">
                 <ul>
                     <li class="home">
-                        <a href="">home</a>
+                        <a href="./main.html">home</a>
                     </li>
                     <li class="selected">
                         <a href="javascript:void(0);">개인정보처리방침</a>
