--- a/portal/html/USR-4210-H-CONTN.html
+++ b/portal/html/USR-4210-H-CONTN.html
@@ -287,7 +287,7 @@
             <div class="location">
                 <ul>
                     <li class="home">
-                        <a href="">home</a>
+                        <a href="./main.html">home</a>
                     </li>
                     <li class="selected">
                         <a href="javascript:void(0);">이메일무단수집거부</a>
