벤처투자포털 링크연결

--- a/portal/html/USR-1341-F-LIST.html
+++ b/portal/html/USR-1341-F-LIST.html
@@ -290,7 +290,7 @@
                         <a href="./main.html">home</a>
                     </li>
                     <li>
-                        <a href="">벤처투자포털</a>
+                        <a href="javascript:void(0);">벤처투자포털</a>
                         <ul>
                             <li><a href="">벤처투자매칭</a></li>
                             <li><a href="">투자가이드</a></li>
@@ -298,12 +298,12 @@
                         </ul>
                     </li>
                     <li class="selected">
-                        <a href="">벤처투자 TALK</a>
+                        <a href="javascript:void(0);">벤처투자 TALK</a>
                         <ul>
-                            <li><a href="">공지사항</a></li>
                             <li><a href="./USR-1310-H-CONTN.html">포털소개</a></li>
-                            <li><a href="./USR-1320-B-LIST.html">커뮤니티</a></li>
-                            <li><a href="./USR-1350-F-FORM.html">벤처투자 부당행위 신고센터</a></li>
+                            <li><a href="./USR-1320-B-LIST.html">공지사항</a></li>
+                            <li><a href="./USR-1330-F-LIST.html">커뮤니티</a></li>
+                            <li><a href="./USR-1350-F-DASH.html">벤처투자 부당행위 신고센터</a></li>
                             <li><a href="./USR-1361-H-CONTN.html">유관기관 안내</a></li>
                         </ul>
                     </li>
