--- a/portal/html/USR-1350-F-DTL.html
+++ b/portal/html/USR-1350-F-DTL.html
@@ -297,14 +297,22 @@
                             <li><a href="">정보서비스</a></li>
                         </ul>
                     </li>
-                    <li class="selected">
+                    <li>
                         <a href="javascript:void(0);">벤처투자 부당행위 신고센터</a>
                         <ul>
-                            <li><a href="">공지사항</a></li>
                             <li><a href="./USR-1310-H-CONTN.html">포털소개</a></li>
-                            <li><a href="./USR-1320-B-LIST.html">커뮤니티</a></li>
+                            <li><a href="./USR-1320-B-LIST.html">공지사항</a></li>
+                            <li><a href="./USR-1330-F-LIST.html">커뮤니티</a></li>
                             <li><a href="./USR-1341-F-LIST.html">벤처투자 TALK</a></li>
                             <li><a href="./USR-1361-H-CONTN.html">유관기관 안내</a></li>
+                        </ul>
+                    </li>
+                    <li class="selected">
+                        <a href="javascript:void(0);">신고내역상세</a>
+                        <ul>
+                            <li><a href="./USR-1350-F-DASH.html">부당행위 신고안내</a></li>
+                            <li><a href="./USR-1350-F-FORM.html">부당행위 신고</a></li>
+                            <li><a href="./USR-1350-F-DTL.html">신고내역확인</a></li>
                         </ul>
                     </li>
                 </ul>
