--- a/portal/html/USR-1320-B-DTL.html
+++ b/portal/html/USR-1320-B-DTL.html
@@ -301,9 +301,9 @@
                         <a href="javascript:void(0);">공지사항</a>
                         <ul>
                             <li><a href="./USR-1310-H-CONTN.html">포털소개</a></li>
-                            <li><a href="./USR-1320-B-LIST.html">커뮤니티</a></li>
+                            <li><a href="./USR-1330-F-LIST.html">커뮤니티</a></li>
                             <li><a href="./USR-1341-F-LIST.html">벤처투자 TALK</a></li>
-                            <li><a href="./USR-1350-F-FORM.html">벤처투자 부당행위 신고센터</a></li>
+                            <li><a href="./USR-1350-F-DASH.html">벤처투자 부당행위 신고센터</a></li>
                             <li><a href="./USR-1361-H-CONTN.html">유관기관 안내</a></li>
                         </ul>
                     </li>
