--- a/portal/html/USR-1334-F-DASH.html
+++ b/portal/html/USR-1334-F-DASH.html
@@ -297,12 +297,14 @@
                             <li><a href="">정보서비스</a></li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="selected">
                         <a href="javascript:void(0);">커뮤니티</a>
                         <ul>
-                            <li><a href=""></a></li>
-                            <li><a href="">공지사항</a></li>
-                            <li><a href="">공지사항</a></li>
+                            <li><a href="./USR-1310-H-CONTN.html">포털소개</a></li>
+                            <li><a href="./USR-1320-B-LIST.html">공지사항</a></li>
+                            <li><a href="./USR-1341-F-LIST.html">벤처투자 TALK</a></li>
+                            <li><a href="./USR-1350-F-DASH.html">벤처투자 부당행위 신고센터</a></li>
+                            <li><a href="./USR-1361-H-CONTN.html">유관기관 안내</a></li>
                         </ul>
                     </li>
                 </ul>
