마이페이지 링크 정리

--- a/portal/html/USR-2040-F-DASH.html
+++ b/portal/html/USR-2040-F-DASH.html
@@ -291,13 +291,16 @@
                     <li>
                         <a href="javascript:void(0);">마이페이지</a>
                         <ul>
-                            <li><a href="">회원</a></li>
                         </ul>
                     </li>
                     <li class="selected">
                         <a href="javascript:void(0);">대시보드</a>
                         <ul>
-                            <li><a href="">로그인</a></li>
+                            <li><a href="./USR-2041-F-FORM.html">내 정보 관리(개인)</a></li>
+                            <li><a href="./USR-20411-F-FORM.html">내 정보 관리(기업)</a></li>
+                            <li><a href="./USR-2042-F-LIST.html">즐겨찾기 관리</a></li>
+                            <li><a href="./USR-2044-F-LIST.html">알림서비스</a></li>
+                            <li><a href="./USR-2045-F-LIST.html">IR 자료요청 관리</a></li>
                         </ul>
                     </li>
                 </ul>
