--- a/portal/html/USR-2042-F-LIST.html
+++ b/portal/html/USR-2042-F-LIST.html
@@ -292,13 +292,16 @@
                     <li>
                         <a href="javascript:void(0);">마이페이지</a>
                         <ul>
-                            <li><a href="">마이페이지</a></li>
                         </ul>
                     </li>
                     <li class="selected">
                         <a href="javascript:void(0);">즐겨찾기 관리</a>
                         <ul>
-                            <li><a href="./USR-1211-H-CONTN.html">정책</a></li>
+                            <li><a href="./USR-2040-F-DASH.html">대시보드</a></li>
+                            <li><a href="./USR-2041-F-FORM.html">내 정보 관리(개인)</a></li>
+                            <li><a href="./USR-20411-F-FORM.html">내 정보 관리(기업)</a></li>
+                            <li><a href="./USR-2044-F-LIST.html">알림서비스</a></li>
+                            <li><a href="./USR-2045-F-LIST.html">IR 자료요청 관리</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -309,8 +312,6 @@
                 <div class="tit_box">
                     <h3>즐겨찾기 관리</h3>
                 </div>
-    
-                
 
                 <div class="tab_group">
                     <div class="tab_btn">
