--- a/pub_list.html
+++ b/pub_list.html
@@ -1082,8 +1082,8 @@
                     path:'./portal/html/USR-4010-H-CONTN.html',
                     date:'2022-09-26',
                     mdate:'2022-12-01',
-                    con:'완료',
-                    etc:'<span class="red">컨텐츠 확인필요</span><span class="blue">디자인요청</span> [2차디자인]'
+                    con:'작업중',
+                    etc:'<span class="blue">디자인요청</span> [2차디자인]'
                 },
                 {
                     division: '',
@@ -1091,8 +1091,8 @@
                     path:'./portal/html/USR-4110-H-CONTN.html',
                     date:'2022-09-26',
                     mdate:'2022-12-01',
-                    con:'완료',
-                    etc:'<span class="red">컨텐츠 확인필요</span> [2차디자인]'
+                    con:'작업중',
+                    etc:'<span class="blue">디자인요청</span> [2차디자인]'
                 },
                 {
                     division: '',
@@ -1100,8 +1100,8 @@
                     path:'./portal/html/USR-4210-H-CONTN.html',
                     date:'2022-09-26',
                     mdate:'2022-12-02',
-                    con:'완료',
-                    etc:'<span class="red">컨텐츠 확인필요</span> [2차디자인]'
+                    con:'작업중',
+                    etc:'<span class="red">컨텐츠 없음</span><span class="blue">디자인요청</span> [2차디자인]'
                 },
                 {
                     division: '',
