--- a/portal/html/USR-1010-F-LIST.html
+++ b/portal/html/USR-1010-F-LIST.html
@@ -766,7 +766,7 @@
 
                     <ul>
                         <li>
-                            <a href="">
+                            <a href="./USR-1010-F-DTL.html">
                                 <div class="img">
                                     <img src="../images/content/newsletter.png" alt="임시이미지">
                                 </div>
@@ -787,7 +787,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="./USR-1010-F-DTL.html">
                                 <div class="img">
                                     <img src="../images/content/newsletter.png" alt="임시이미지">
                                 </div>
@@ -808,7 +808,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="./USR-1010-F-DTL.html">
                                 <div class="img">
                                     <img src="../images/content/newsletter.png" alt="임시이미지">
                                 </div>
@@ -829,7 +829,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="./USR-1010-F-DTL.html">
                                 <div class="img">
                                     <img src="../images/content/newsletter.png" alt="임시이미지">
                                 </div>
@@ -850,7 +850,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="./USR-1010-F-DTL.html">
                                 <div class="img">
                                     <img src="../images/content/newsletter.png" alt="임시이미지">
                                 </div>
@@ -871,7 +871,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="./USR-1010-F-DTL.html">
                                 <div class="img">
                                     <img src="../images/content/newsletter.png" alt="임시이미지">
                                 </div>
@@ -892,7 +892,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="./USR-1010-F-DTL.html">
                                 <div class="img">
                                     <img src="../images/content/newsletter.png" alt="임시이미지">
                                 </div>
