--- a/portal/html/USR-1020-F-LIST.html
+++ b/portal/html/USR-1020-F-LIST.html
@@ -917,7 +917,7 @@
 
                                 <ul>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1020-F-DTL.html">
                                             <div class="state_box type_02">
                                                 <span class="mauve">신기술사</span>
                                             </div>
@@ -936,7 +936,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1020-F-DTL.html">
                                             <div class="state_box type_02">
                                                 <span class="skyblue">투자사구분</span>
                                             </div>
@@ -954,7 +954,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1020-F-DTL.html">
                                             <div class="state_box type_02">
                                                 <span class="apricot">창투사</span>
                                                 <span class="lightgreen">창업기획자</span>
@@ -973,7 +973,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1020-F-DTL.html">
                                             <div class="state_box type_02">
                                                 <span class="skyblue">신기술사</span>
                                             </div>
@@ -991,7 +991,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1020-F-DTL.html">
                                             <div class="state_box type_02">
                                                 <span class="skyblue">신기술사</span>
                                             </div>
@@ -1009,7 +1009,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1020-F-DTL.html">
                                             <div class="state_box type_02">
                                                 <span class="skyblue">신기술사</span>
                                             </div>
@@ -1027,7 +1027,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1020-F-DTL.html">
                                             <div class="state_box type_02">
                                                 <span class="skyblue">신기술사</span>
                                             </div>
@@ -1045,7 +1045,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1020-F-DTL.html">
                                             <div class="state_box type_02">
                                                 <span class="skyblue">신기술사</span>
                                             </div>
@@ -1063,7 +1063,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1020-F-DTL.html">
                                             <div class="state_box type_02">
                                                 <span class="skyblue">신기술사</span>
                                             </div>
@@ -1081,7 +1081,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1020-F-DTL.html">
                                             <div class="state_box type_02">
                                                 <span class="skyblue">신기술사</span>
                                             </div>
@@ -1150,7 +1150,7 @@
 
                                 <ul>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1020-F-DTL.html">
                                             <div class="state_box type_02">
                                                 <span class="mauve">신기술사</span>
                                             </div>
@@ -1168,7 +1168,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1020-F-DTL.html">
                                             <div class="state_box type_02">
                                                 <span class="skyblue">투자사구분</span>
                                             </div>
@@ -1186,7 +1186,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1020-F-DTL.html">
                                             <div class="state_box type_02">
                                                 <span class="apricot">창투사</span>
                                                 <span class="lightgreen">창업기획자</span>
@@ -1205,7 +1205,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1020-F-DTL.html">
                                             <div class="state_box type_02">
                                                 <span class="skyblue">신기술사</span>
                                             </div>
@@ -1223,7 +1223,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1020-F-DTL.html">
                                             <div class="state_box type_02">
                                                 <span class="skyblue">신기술사</span>
                                             </div>
@@ -1241,7 +1241,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1020-F-DTL.html">
                                             <div class="state_box type_02">
                                                 <span class="skyblue">신기술사</span>
                                             </div>
@@ -1259,7 +1259,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1020-F-DTL.html">
                                             <div class="state_box type_02">
                                                 <span class="skyblue">신기술사</span>
                                             </div>
@@ -1277,7 +1277,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1020-F-DTL.html">
                                             <div class="state_box type_02">
                                                 <span class="skyblue">신기술사</span>
                                             </div>
@@ -1295,7 +1295,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1020-F-DTL.html">
                                             <div class="state_box type_02">
                                                 <span class="skyblue">신기술사</span>
                                             </div>
@@ -1313,7 +1313,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1020-F-DTL.html">
                                             <div class="state_box type_02">
                                                 <span class="skyblue">신기술사</span>
                                             </div>
