투자유치희망기업 검색 상세 수정 /

--- a/portal/html/USR-1334-F-DASH.html
+++ b/portal/html/USR-1334-F-DASH.html
@@ -522,6 +522,13 @@
                             <div class="board_infobox">
                                 <div class="total">전체 <span>150</span>건</div>
                                 <div class="search_box">
+                                    <div class="sel_box">
+                                        <label for="sel_01" class="hidden">검색조건 선택</label>
+                                        <select id="sel_01">
+                                            <option value="">제목</option>
+                                            <option value="">내용</option>
+                                        </select>
+                                    </div>
                                     <label for="search_01" class="hidden">검색어 입력</label>
                                     <input type="text" id="search_01" placeholder="검색어를 입력해주세요.">
                                     <button>검색</button>
@@ -686,6 +693,13 @@
                             <div class="board_infobox">
                                 <div class="total">전체 <span>150</span>건</div>
                                 <div class="search_box">
+                                    <div class="sel_box">
+                                        <label for="sel_01" class="hidden">검색조건 선택</label>
+                                        <select id="sel_01">
+                                            <option value="">제목</option>
+                                            <option value="">내용</option>
+                                        </select>
+                                    </div>
                                     <label for="search_01" class="hidden">검색어 입력</label>
                                     <input type="text" id="search_01" placeholder="검색어를 입력해주세요.">
                                     <button>검색</button>
@@ -850,6 +864,13 @@
                             <div class="board_infobox">
                                 <div class="total">전체 <span>150</span>건</div>
                                 <div class="search_box">
+                                    <div class="sel_box">
+                                        <label for="sel_01" class="hidden">검색조건 선택</label>
+                                        <select id="sel_01">
+                                            <option value="">제목</option>
+                                            <option value="">내용</option>
+                                        </select>
+                                    </div>
                                     <label for="search_01" class="hidden">검색어 입력</label>
                                     <input type="text" id="search_01" placeholder="검색어를 입력해주세요.">
                                     <button>검색</button>
@@ -1026,11 +1047,11 @@
 
                                         <div class="board_infobox">
                                             <div class="total">
-                                                <!-- 전체 <span>150</span>건 -->
+                                                전체 <span>150</span>건
                                             </div>
                                             <div class="search_box">
                                                 <label for="search_02" class="hidden">검색어 입력</label>
-                                                <input type="text" id="search_02" placeholder="검색어를 입력해주세요.">
+                                                <input type="text" id="search_02" placeholder="닉네임을 입력해주세요.">
                                                 <button>검색</button>
                                             </div>
                                         </div>
