--- a/portal/html/pub_guide.html
+++ b/portal/html/pub_guide.html
@@ -146,6 +146,14 @@
                         <div class="tit_box">
                             <h4>페이지타이틀(h4)</h4>
                         </div>
+
+                        <!-- 페이지타이틀 -->
+                        <div class="tit_box row">
+                            <h4><span></span>게시판 관리</h4>
+                            <div class="btn_box">
+                                <a href="" class="btn_blue">글쓰기</a>
+                            </div>
+                        </div>
                     </dd>
                 </dl>
                 <dl class="item-content">
