--- a/portal/html/USR-1010-F-DTL.html
+++ b/portal/html/USR-1010-F-DTL.html
@@ -13,6 +13,7 @@
     <!-- pub js -->
     <script src="../js/jquery-3.6.0.min.js"></script>
     <script src="../js/jquery-ui.js"></script>
+    <script src="../js/swiper-bundle.min.js"></script>
     <script src="../js/common.js"></script>
 
 </head>
@@ -335,14 +336,28 @@
                                 <strong>기업명</strong>
                                 <ul class="details">
                                     <li>
-                                        <span>설립일 2021-01-01 (3년 7개월)</span>
-                                        <span>125,124억 운용금액</span>
+                                        <span>소재지</span>
+                                        <span>서울시 영등포구 여의나루로 1, 102호</span>
                                     </li>
-                                    <li>주소 서울시 영등포구 여의나루로 1 102호</li>
-                                    <li>https://www.abc.com</li>
                                     <li>
-                                        국내 최초 전통주 술 정기 구독 서비스 쇼핑몰 술담화에서 소믈리에가 추천하는 다양한 술을 경험하세요.<br/>
-                                        2천종이 넘는 다채로운 전통주가 한 달에 한번, 집 앞으로 찾아옵니다.
+                                        <span>설립일(업력)</span>
+                                        <span>2010-01-01 (9년 11개월)</span>
+                                    </li>
+                                    <li>
+                                        <span>TEL. 02-1234-4566</span>
+                                        <span>FAX. 02-1234-4567</span>
+                                    </li>
+                                    <li>
+                                        <span>투자희망금액</span>
+                                        <span>10억원</span>
+                                    </li>
+                                    <li>
+                                        <span>홈페이지</span>
+                                        <span>https://www.abc.com</span>
+                                    </li>
+                                    <li>
+                                        <span>이메일</span>
+                                        <span>Ins-ventrue@naver.com</span>
                                     </li>
                                 </ul>
                             </div>
@@ -352,8 +367,8 @@
                                 <li>last update 2022-07-01</li>
                                 <li>
                                     <div class="btn_box">
-                                        <button class="btn_skyblue shadow">IR 자료 요청</button>
-                                        <button class="btn_blue shadow">쪽지 보내기</button>
+                                        <button class="btn_skyblue shadow dialog-link" data-target="#note_01">IR 자료 요청</button>
+                                        <button class="btn_blue shadow dialog-link" data-target="#note_02">쪽지 보내기</button>
                                     </div>
                                 </li>
                             </ul>
@@ -405,7 +420,14 @@
                                         <dl>
                                             <dt>주요 제품 및 서비스</dt>
                                             <dd>
-                                                나에게 맞는 우리술을 가장 쉽게 고를 수 있는 우리술 전문 B2B2C Wep App 플랫폼
+                                                <dl>
+                                                    <dt>주요 키워드</dt>
+                                                    <dd>기업회원 내 정보 관리 > 주요제품 및 서비스의 키워드 전체 내용 표시(300자 이내)</dd>
+                                                </dl>
+                                                <dl>
+                                                    <dt>상세 설명</dt>
+                                                    <dd>기업회원 내 정보 관리 > 기업정보의 핵심 사업 전체 내용 표시(50자 이내)</dd>
+                                                </dl>
                                             </dd>
                                         </dl>
                                     </li>
@@ -413,8 +435,15 @@
                                         <dl>
                                             <dt>제품 이미지</dt>
                                             <dd>
-                                                <div class="img">
-                                                    <img src="../images/content/product_img.png" alt="제품 임시이미지">
+                                                <div class="company_img">
+                                                    <ul class="swiper-wrapper">
+                                                        <li class="swiper-slide"><img src="../images/content/product_img.png" alt="제품 임시이미지"></li>
+                                                        <li class="swiper-slide"><img src="../images/content/product_img.png" alt="제품 임시이미지"></li>
+                                                        <li class="swiper-slide"><img src="../images/content/product_img.png" alt="제품 임시이미지"></li>
+                                                    </ul>
+                                                    <button class="swiper-button-prev"></button>
+                                                    <button class="swiper-button-next"></button>
+                                                    <div class="swiper-pagination"></div>
                                                 </div>
                                             </dd>
                                         </dl>
@@ -707,5 +736,152 @@
 
 </div>
 
+<!-- IR자료요청 팝업 -->
+<div id="note_01" class="dialog note_dialog">
+
+    <div class="tit_box">
+        <h3>IR 자료 요청</h3>
+    </div>
+
+    <div class="tbl_box_data">
+        <table>
+            <caption>IR 자료 요청</caption>
+            <colgroup>
+                <col width="20%;">
+                <col width="30%;">
+                <col width="20%;">
+                <col width="30%;">
+            </colgroup>
+            <tbody>
+                <tr>
+                    <th scope="row"><label for="input_01">수신회원</label></th>
+                    <td>
+                        <div class="inp_box">
+                            <input type="text" id="input_01" value="홍길동친구">
+                        </div>
+                    </td>
+                    <th scope="row"><label for="sel_01">구분</label></th>
+                    <td>IR 자료 요청</td>
+                </tr>
+                <tr>
+                    <th scope="row"><label for="input_02">제목</label></th>
+                    <td colspan="3">
+                        <div class="inp_box">
+                            <input type="text" id="input_02">
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row"><label for="textarea_01">내용</label></th>
+                    <td colspan="3">
+                        <div class="inp_group">
+                            <div class="textarea_box cont">
+                                <textarea id="textarea_01"></textarea>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="btn_box_group">
+        <div class="btn_box">
+            <a href="javascript:void(0);" class="btn_mint shadow" onclick="onShowToast('쪽지가 발송되었습니다.');">저장</a>
+        </div>
+        <div class="btn_box">
+            <a href="javascript:void(0);" class="btn_gray shadow pop_close">취소</a>
+        </div>
+    </div>
+
+</div>
+
+<!-- 쪽지보내기 팝업 -->
+<div id="note_02" class="dialog note_dialog">
+
+    <div class="tit_box">
+        <h3>쪽지보내기</h3>
+    </div>
+
+    <div class="tbl_box_data">
+        <table>
+            <caption>쪽지보내기</caption>
+            <colgroup>
+                <col width="20%;">
+                <col width="30%;">
+                <col width="20%;">
+                <col width="30%;">
+            </colgroup>
+            <tbody>
+                <tr>
+                    <th scope="row"><label for="input_01">수신회원</label></th>
+                    <td>
+                        <div class="inp_box">
+                            <input type="text" id="input_01" value="홍길동친구">
+                        </div>
+                    </td>
+                    <th scope="row"><label for="sel_01">구분</label></th>
+                    <td>투자제안</td>
+                </tr>
+                <tr>
+                    <th scope="row"><label for="input_02">제목</label></th>
+                    <td colspan="3">
+                        <div class="inp_box">
+                            <input type="text" id="input_02">
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row"><label for="textarea_01">내용</label></th>
+                    <td colspan="3">
+                        <div class="inp_group">
+                            <div class="textarea_box cont">
+                                <textarea id="textarea_01"></textarea>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="btn_box_group">
+        <div class="btn_box">
+            <a href="javascript:void(0);" class="btn_mint shadow" onclick="onShowToast('쪽지가 발송되었습니다.');">저장</a>
+        </div>
+        <div class="btn_box">
+            <a href="javascript:void(0);" class="btn_gray shadow pop_close">취소</a>
+        </div>
+    </div>
+
+</div>
+
+<!-- 토스트 메세지 -->
+<div class="toast_box"><div class="txt"></div></div>
+
+<script>
+    var swiper = new Swiper('.company_img', {
+        slidesPerView: 1,
+        spaceBetween: 0,
+        freeMode: false,
+        speed: 300,
+        allowTouchMove: true,
+        navigation: {
+          nextEl: '.swiper-button-next',
+          prevEl: '.swiper-button-prev',
+        },
+        pagination: {
+            el: '.swiper-pagination',
+            clickable: true,
+        },
+        observer: true,
+        mousewheel: true,
+        // breakpoints: {
+        //     768: {
+        //         slidesPerView: 5,
+        //     },
+        // }
+    });
+</script>
 </body>
 </html>
