--- a/portal/html/USR-1333-F-FORM.html
+++ b/portal/html/USR-1333-F-FORM.html
@@ -315,6 +315,7 @@
 
                 <div class="tit_box">
                     <h3>커뮤니티 개설</h3>
+                    <span>내용</span>
                 </div>
 
                 <div class="tit_box">
@@ -501,10 +502,113 @@
                         </tbody>
                     </table>
                 </div>
+                
+                <div class="tit_box row">
+                    <h4><span></span>게시판 관리</h4>
+                    <div class="btn_box">
+                        <button class="btn_blue">게시판 추가</button>
+                    </div>
+                </div>
+
+                <div class="tbl_box">
+                    <table>
+                        <caption>게시판 관리</caption>
+                        <colgroup>
+                            <col width="8%">
+                            <col width="*">
+                            <col width="20%">
+                            <col width="20%">
+                        </colgroup>
+                        <thead>
+                            <tr>
+                                <th scope="col">번호</th>
+                                <th scope="col">게시판명</th>
+                                <th scope="col">대상 회원</th>
+                                <th scope="col">관리</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>공지사항</td>
+                                <td>
+                                    <div class="sel_box">
+                                        <select>
+                                            <option value="">전체</option>
+                                            <option value="">우수회원</option>
+                                            <option value="">정회원</option>
+                                            <option value="">준회원</option>
+                                        </select>
+                                    </div>
+                                </td>
+                                <td>내용</td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>자유게시판</td>
+                                <td>
+                                    <div class="sel_box">
+                                        <select>
+                                            <option value="">전체</option>
+                                            <option value="">우수회원</option>
+                                            <option value="">정회원</option>
+                                            <option value="">준회원</option>
+                                        </select>
+                                    </div>
+                                </td>
+                                <td>내용</td>
+                            </tr>
+                            <tr>
+                                <td>3</td>
+                                <td>일정알림</td>
+                                <td>
+                                    <div class="sel_box">
+                                        <select>
+                                            <option value="">전체</option>
+                                            <option value="">우수회원</option>
+                                            <option value="">정회원</option>
+                                            <option value="">준회원</option>
+                                        </select>
+                                    </div>
+                                </td>
+                                <td>내용</td>
+                            </tr>
+                            <tr>
+                                <td>4</td>
+                                <td>
+                                    <div class="inp_box">
+                                        <label for="inp_01" class="hidden">입력</label>
+                                        <input type="text" id="inp_01" value="비밀게시판" readonly>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="sel_box">
+                                        <select>
+                                            <option value="">전체</option>
+                                            <option value="">우수회원</option>
+                                            <option value="">정회원</option>
+                                            <option value="">준회원</option>
+                                        </select>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="btn_box_group">
+                                        <div class="btn_box">
+                                            <button class="btn_blue dialog-link" data-target="#alpop_01">수정</button>
+                                        </div>
+                                        <div class="btn_box">
+                                            <a href="" class="btn_gray dialog-link" data-target="#alpop_02">선택 삭제</a>
+                                        </div>
+                                    </div>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
 
                 <div class="btn_box_group type_tbl">
                     <div class="btn_box bg">
-                        <a href="" class="btn_save">저장</a>
+                        <a href="" class="btn_save">등록</a>
                     </div>
                     <div class="btn_box bg">
                         <a href="" class="btn_cancel">취소</a>
@@ -636,6 +740,50 @@
     <!-- //pop_content -->
 
 </div>
+
+<!-- 게시판 정보 수정 팝업 -->
+<div id="alpop_01" class="dialog alpop_box">
+
+    <div class="pop_header">
+        <span class="img1"></span>
+    </div>
+
+    <div class="pop_content">
+        게시판 정보를 수정하시겠습니까?
+    </div>
+
+    <div class="pop_footer">
+        <div class="btn_box">
+            <button class="btn_gray pop_close">취소</button>
+            <button class="btn_mint" onclick="onShowToast('게시판 정보가 수정되었습니다.');">확인</button>
+        </div>
+    </div>
+
+</div>
+
+<!-- 게시판 정보 삭제 팝업 -->
+<div id="alpop_02" class="dialog alpop_box">
+
+    <div class="pop_header">
+        <span class="img3"></span>
+    </div>
+
+    <div class="pop_content">
+        게시판을 삭제하시겠습니까?<br/>
+        <span class="f_color_orange">게시판을 삭제하시면 등록된 게시물도 모두 삭제됩니다.</span>
+    </div>
+
+    <div class="pop_footer">
+        <div class="btn_box">
+            <button class="btn_gray pop_close">취소</button>
+            <button class="btn_mint" onclick="onShowToast('게시판이 정상 삭제되었습니다.');">확인</button>
+        </div>
+    </div>
+
+</div>
+
+<!-- 토스트 메세지 -->
+<div class="toast_box"><div class="txt"></div></div>
 
 </body>
 </html>
