커뮤니티 수정 및 추가 업데이트

--- a/portal/html/USR-1242-F-DTL.html
+++ b/portal/html/USR-1242-F-DTL.html
@@ -479,11 +479,11 @@
                         </div>
                     </td>
                 </tr>
-                <tr class="bg">
-                    <td colspan="4">
+                <tr>
+                    <th scope="row"><label for="textarea_01">내용</label></th>
+                    <td colspan="3">
                         <div class="inp_group">
                             <div class="textarea_box cont">
-                                <label for="textarea_01" class="hidden">입력</label>
                                 <textarea id="textarea_01"></textarea>
                             </div>
                         </div>
