--- a/portal/html/USR-2041-F-FORM.html
+++ b/portal/html/USR-2041-F-FORM.html
@@ -461,11 +461,201 @@
                     </div>
 
                     <div class="btn_box_group type_01">
-                        <div class="btn_box">
-                            <a href="" class="btn_blue dialog-link" data-target="#note_03">회원유형 변경신청</a>
+                        <div class="btn_box max">
+                            <a href="javascript:void(0);" class="btn_blue dialog-link" data-target="#note_03">전문투자자 변경 신청</a>
+                        </div>
+                        <div class="btn_box max">
+                            <a href="javascript:void(0);" class="btn_blue trans_enterprise_btn">기업회원 전환</a>
                         </div>
                         <div class="btn_box">
                             <a href="javascript:void(0);" class="btn_white dialog-link" data-target="#note_01">비밀번호 변경</a>
+                        </div>
+                    </div>
+
+                    <div class="trans_enterprise">
+                        <div class="tit_box">
+                            <h4><span></span>기업정보</h4>
+                        </div>
+    
+                        <div class="tbl_box_data">
+                            <table>
+                                <caption>기업정보</caption>
+                                <colgroup>
+                                    <col width="20%;">
+                                    <col width="30%;">
+                                    <col width="20%;">
+                                    <col width="30%;">
+                                </colgroup>
+                                <tbody>
+                                    <tr>
+                                        <th scope="row"><label for="input_001">사업자등록번호<span class="req">*</span></label></th>
+                                        <td colspan="3">
+                                            <div class="inp_group search company_num">
+                                                <div class="inp_group">
+                                                    <div class="inp_box">
+                                                        <input type="text" id="input_001" value="144" disabled>
+                                                    </div>
+                                                    <div class="inp_box">
+                                                        <input type="text" id="input_002" value="86" disabled>
+                                                    </div>
+                                                    <div class="inp_box">
+                                                        <input type="text" id="input_003" value="02432" disabled>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row"><label for="input_004">기업명<span class="req">*</span></label></th>
+                                        <td colspan="3">
+                                            <div class="inp_group">
+                                                <div class="inp_box min">
+                                                    <input type="text" id="input_004" value="기업명" disabled>
+                                                </div>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row"><label for="input_005">대표자명<span class="req">*</span></label></th>
+                                        <td colspan="3">
+                                            <div class="inp_group">
+                                                <div class="inp_box min">
+                                                    <input type="text" id="input_005" value="대표자명" disabled>
+                                                </div>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row"><label for="input_006">설립일자<span class="req">*</span></label></th>
+                                        <td colspan="3">
+                                            <div class="inp_group">
+                                                <div class="inp_box min datepicker_box">
+                                                    <input type="text" id="input_006" class="datepicker_day">
+                                                </div>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row"><label for="input_007">홈페이지</th>
+                                        <td colspan="3">
+                                            <div class="inp_group">
+                                                <div class="inp_box min">
+                                                    <input type="text" id="input_007">
+                                                </div>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row"><label for="radio_001">기업업종<span class="req">*</span></label></th>
+                                        <td colspan="3">
+                                            <div class="rdo_box">
+                                                <span>
+                                                    <input type="radio" id="radio_001" name="rdo_group_002">
+                                                    <label for="radio_001">ICT제조</label>
+                                                </span>
+                                                <span>
+                                                    <input type="radio" id="radio_002" name="rdo_group_002">
+                                                    <label for="radio_002">ICT서비스</label>
+                                                </span>
+                                                <span>
+                                                    <input type="radio" id="radio_003" name="rdo_group_002">
+                                                    <label for="radio_003">전기/기계/장비</label>
+                                                </span>
+                                                <span>
+                                                    <input type="radio" id="radio_004" name="rdo_group_002">
+                                                    <label for="radio_004">화학/소재</label>
+                                                </span>
+                                                <span>
+                                                    <input type="radio" id="radio_005" name="rdo_group_002">
+                                                    <label for="radio_005">바이오/의료</label>
+                                                </span>
+                                                <span>
+                                                    <input type="radio" id="radio_006" name="rdo_group_002">
+                                                    <label for="radio_006">영상/공연/음반</label>
+                                                </span>
+                                                <span>
+                                                    <input type="radio" id="radio_007" name="rdo_group_002">
+                                                    <label for="radio_007">게임</label>
+                                                </span>
+                                                <span>
+                                                    <input type="radio" id="radio_008" name="rdo_group_002">
+                                                    <label for="radio_008">유통/서비스</label>
+                                                </span>
+                                                <span>
+                                                    <input type="radio" id="radio_009" name="rdo_group_002">
+                                                    <label for="radio_009">기타</label>
+                                                </span>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row"><label for="input_008">사업장 소재지<span class="req">*</span></label></th>
+                                        <td colspan="3">
+                                            <div class="inp_group address">
+                                                <span>
+                                                    <div class="inp_box add_num">
+                                                        <input type="text" id="" disabled>
+                                                    </div>
+                                                    <div class="box_btn">
+                                                        <button class="search" id="input_008">주소검색</button>
+                                                    </div>
+                                                </span>
+                                                <span>
+                                                    <div class="inp_box">
+                                                        <input type="text" id="" disabled>
+                                                    </div>
+                                                </span>
+                                                <span>
+                                                    <div class="inp_box">
+                                                        <input type="text" id="">
+                                                    </div>
+                                                </span>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row"><label for="input_009">특이사항</label></th>
+                                        <td colspan="3">
+                                            <div class="inp_group">
+                                                <div class="chk_box">
+                                                    <span>
+                                                        <input type="checkbox" id="chk_1">
+                                                        <label for="chk_1">벤처기업</label>
+                                                    </span>
+                                                    <span>
+                                                        <input type="checkbox" id="chk_2">
+                                                        <label for="chk_2">이노비즈</label>
+                                                    </span>
+                                                    <span>
+                                                        <input type="checkbox" id="chk_3">
+                                                        <label for="chk_3">창업보육센터입주</label>
+                                                    </span>
+                                                    <span>
+                                                        <input type="checkbox" id="chk_4">
+                                                        <label for="chk_4">기업부설연구소</label>
+                                                    </span>
+                                                    <span>
+                                                        <input type="checkbox" id="chk_5">
+                                                        <label for="chk_5">벤처투자마트 참여</label>
+                                                    </span>
+                                                    <span>
+                                                        <input type="checkbox" id="chk_6">
+                                                        <label for="chk_6">여성기업</label>
+                                                    </span>
+                                                    <span>
+                                                        <input type="checkbox" id="chk_7">
+                                                        <label for="chk_7">창업초기</label>
+                                                    </span>
+                                                    <span>
+                                                        <input type="checkbox" id="chk_8">
+                                                        <label for="chk_8">청년기업(40세 이하)</label>
+                                                    </span>
+                                                </div>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
 
@@ -588,6 +778,9 @@
                 </div>
 
                 <div class="btn_box_group type_01">
+                    <div class="btn_box">
+                        <a href="javascript:void(0);" class="btn_white dialog-link" data-target="#alpop_02">탈퇴</a>
+                    </div>
                     <div class="btn_box">
                         <a href="javascript:void(0);" class="btn_blue dialog-link" data-target="#alpop_01">수정</a>
                     </div>
@@ -799,6 +992,56 @@
         <div class="btn_box">
             <button class="btn_white pop_close">취소</button>
             <button class="btn_mint pop_close" onclick="onShowToast('회원정보가 정상적으로 수정되었습니다.')">확인</button>
+        </div>
+    </div>
+
+</div>
+
+<!-- 탈퇴 팝업 -->
+<div id="alpop_02" class="dialog alpop_box">
+
+    <div class="pop_header">
+        <span class="img1"></span>
+    </div>
+
+    <div class="pop_content">
+        탈퇴하시겠습니까?
+    </div>
+
+    <div class="pop_footer">
+        <div class="btn_box">
+            <button class="btn_white pop_close">취소</button>
+            <button class="btn_mint pop_close dialog-link" data-target="#note_04">확인</button>
+        </div>
+    </div>
+
+</div>
+
+<!-- 비밀번호 인증 팝업2 -->
+<div id="note_04" class="dialog note_dialog">
+
+    <div class="tit_box">
+        <h3>비밀번호 인증</h3>
+    </div>
+
+    <div class="find_group">
+        <div class="find_txt">
+            비밀번호 인증 절차 후, 변경이 가능합니다.<br/>
+            현재 비밀번호를 입력해주세요.
+        </div>
+        <div class="inp_group">
+            <div class="inp_box">
+                <input type="password" placeholder="비밀번호를 입력하세요.">
+            </div>
+        </div>
+    </div>
+
+    <div class="btn_box_group">
+        <div class="btn_box">
+            <a href="javascript:void(0);" class="btn_gray shadow">취소</a>
+        </div>
+        <div class="btn_box">
+            <a href="javascript:void(0);" class="btn_mint shadow" onclick="onShowToast('벤처투자종합포털 회원 탈퇴가 정상처리되었습니다.')">확인</a>
         </div>
     </div>
 
